Add db connection string

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "ServerConnection": "Server=overbooked.database.windows.net;Database=overbooked_prod; User ID=overbookedAdmin;Password=x)]9vN15PO*s;"
+  },
+  "DetailedErrors": true
 }
