Add post function for roomtype

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "ServerConnection": "Server=overbooked.database.windows.net;Database=overbooked_prod; User ID=overbookedAdmin;Password=x)]9vN15PO*s;"
   },
+  "Auth0": {
+    "Domain": "dev-eikmkpeedv5iiwze.jp.auth0.com",
+    "Audience": "https://localhost:5129/api",
+    "Namespace": "https://atcap.io"
+  },
   "DetailedErrors": true
 }
