--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,34 @@
-# Ignore Visual Studio and Rider files
-.vs/
-.idea/
+# Common IntelliJ Platform excludes
+
+# User specific
+**/.idea/**/workspace.xml
+**/.idea/**/tasks.xml
+**/.idea/shelf/*
+**/.idea/dictionaries
+**/.idea/httpRequests/
+
+# Sensitive or high-churn files
+**/.idea/**/dataSources/
+**/.idea/**/dataSources.ids
+**/.idea/**/dataSources.xml
+**/.idea/**/dataSources.local.xml
+**/.idea/**/sqlDataSources.xml
+**/.idea/**/dynamic.xml
+
+# Rider
+# Rider auto-generates .iml files, and contentModel.xml
+**/.idea/**/*.iml
+**/.idea/**/contentModel.xml
+**/.idea/**/modules.xml
+
 *.suo
 *.user
-*.userosscache
-*.sln.docstates
+.vs/
+[Bb]in/
+[Oo]bj/
+_UpgradeReport_Files/
+[Pp]ackages/
 
-# Ignore Rider workspace files
-*.iml
-*.ipr
-*.iws
-
-# Ignore build artifacts
-bin/
-obj/
-out/
-*.exe
-*.dll
-*.pdb
-*.cache
-*.log
-*.ilk
-*.map
-*.exp
-*.idb
-*.lib
-*.ncb
-*.sdf
-*.ipch
-*.aps
-*.res
+Thumbs.db
+Desktop.ini
+.DS_Store
